Cambiar el nombre de "categoría" a "nivel". Cambiar la palabra "asesor" en el módulo a "Facilitador(a)".

--- a/webMetics/Views/Asesor/CrearAsesor.cshtml
+++ b/webMetics/Views/Asesor/CrearAsesor.cshtml
@@ -6,7 +6,7 @@
 -->
 
 @{
-    ViewBag.Title = "Agregar Asesor";
+    ViewBag.Title = "Agregar Facilitador(a)";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
