--- a/webMetics/Views/Asesor/EditarAsesor.cshtml
+++ b/webMetics/Views/Asesor/EditarAsesor.cshtml
@@ -4,7 +4,7 @@
     Vista del formulario para editar los datos de un asesor
 -->
 @{
-    ViewBag.Title = "Editar Asesor";
+    ViewBag.Title = "Editar Facilitador(a)";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
