--- a/webMetics/Views/Categoria/CrearCategoria.cshtml
+++ b/webMetics/Views/Categoria/CrearCategoria.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.CategoriaModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Crear Categoría";
+    ViewBag.Title = "Crear Nivel";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
