--- a/webMetics/Views/Categoria/ListaCategorias.cshtml
+++ b/webMetics/Views/Categoria/ListaCategorias.cshtml
@@ -1,6 +1,6 @@
 ﻿@using webMetics.Controllers
 @{
-    ViewBag.Title = "Categorías";
+    ViewBag.Title = "Niveles";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
