--- a/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
+++ b/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Lista de participantes</h2>
 <h4> Grupo: @Model.nombreGrupo</h4>
-<h4> Asesor: @Model.nombreAsesor</h4>
+<h4> Facilitador(a): @Model.nombreAsesor</h4>
 
 <table border='1' cellpadding='5' cellspacing='0' style='border: 1px solid #ccc;font-family: Arial; font-size: 10pt;'>
     <tr>
