--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -151,9 +151,20 @@
                         </div>
 
                         <div class="row mt-3">
-                            <h4>Adjuntar archivo del módulo</h4>
-                            <div class="form-group">
-                                @Html.TextBoxFor(grupoModel => grupoModel.archivoAdjunto, null, new { type = "file", @class = "form-control" })
+                            @if (ViewBag.Adjunto != null && ViewBag.Adjunto.Length > 0)
+                            {
+                                <div class="my-3">
+                                    <h4 class="mt-4">Archivo Actual</h4>
+                                    <iframe class="my-2 rounded" id="pdfPreview" src="data:application/pdf;base64,@(ViewBag.Adjunto)" width="100%" height="500" style="border: none;"></iframe>
+                                </div>
+                            }
+
+                            <div class="my-3 p-3 bg-light rounded">
+                                <h4>Adjuntar Nuevo Archivo</h4>
+                                <small class="text-muted">Subir un archivo en formato <strong>PDF</strong> menor a 5 MB.</small>
+                                <div class="form-group mt-3">
+                                    @Html.TextBoxFor(grupoModel => grupoModel.archivoAdjunto, null, new { type = "file", @class = "form-control" })
+                                </div>
                             </div>
                         </div>
                     </div>
