Se pueden enviar las calificaciones por correo.

--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -71,7 +71,7 @@
                             @Html.ActionLink("   Word", "ExportarCalificacionesWord", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Enviar", "EnviarCalificaciones", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-primary bi bi-send" })
+                            @Html.ActionLink("   Enviar por correo", "EnviarCalificaciones", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-primary bi bi-send" })
                         </div>
                     </div>
                 </div>
