El participante puede ver el programa del módulo sin tener que descargarlo.

--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -52,7 +52,7 @@
                                 <div class="mb-3 d-flex">
                                     <label for="file"></label>
                                     <input type="file" class="form-control" name="file" id="file">
-                                    <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
+                                    <input class="btn btn-secondary ms-2" type="submit" value="Examinar...">
 
                                     <input type="hidden" name="idGrupo" id="idGrupo" value="@ViewBag.IdGrupo">
                                 </div>
