--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -137,7 +137,7 @@
                                         }
                                     </div>
                                     <div class="mt-2">
-                                        @Html.ActionLink("Ver el programa del módulo", "DescargarArchivo", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "text-secondary link-opacity-50 link-opacity-100-hover" })
+                                        @Html.ActionLink("Ver el programa del módulo", "VerAdjunto", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "text-secondary link-opacity-50 link-opacity-100-hover" })
                                     </div>
                                 </div>
                                 <div class="card-footer bg-info bg-opacity-25 border-info border-1 border-opacity-25 text-muted">
@@ -296,7 +296,7 @@
                                         }
                                         else
                                         {
-                                            @Html.ActionLink("Ver el programa del módulo", "DescargarArchivo", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "text-secondary link-opacity-50 link-opacity-100-hover" })
+                                            @Html.ActionLink("Ver el programa del módulo", "VerAdjunto", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "text-secondary link-opacity-50 link-opacity-100-hover" })
                                         }
                                     </div>
                                 </div>
