Se despliega el número de grupo de grupos eliminados en sección de información personal.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -79,6 +79,7 @@
                                     {
                                             <div class="card-text mb-3 overflow-scroll align-content-center" style="max-height: 100px;">@grupo.descripcion</div>
                                     }
+                                    <div class="card-text mb-3">Número de grupo: @grupo.numeroGrupo</div>
                                     <div class="card-text mb-3">Cantidad de horas: @grupo.cantidadHoras</div>
                                     @if (!string.IsNullOrEmpty(grupo.nombreAsesor))
                                     {
@@ -221,6 +222,7 @@
                                     {
                                             <div class="card-text mb-3 overflow-scroll align-content-center" style="max-height: 100px;">@grupo.descripcion</div>
                                     }
+                                    <div class="card-text mb-3">Número de grupo: @grupo.numeroGrupo</div>
                                     <div class="card-text mb-3">Cantidad de horas: @grupo.cantidadHoras</div>
                                     @if (!string.IsNullOrEmpty(grupo.nombreAsesor))
                                     {
